<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/EventDetailsPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_name"
        android:padding="5dp"
        android:textAlignment="center"
        android:id="@+id/eventname"
        android:textColor="#000000"
        android:textSize="40sp"
        android:layout_column="0"
        android:layout_span="0"
        android:layout_marginLeft="10dp"
        android:gravity="center_horizontal" />

    <View
        android:layout_height="1dp"
        android:layout_width="1dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/horizontalline" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/DateRow"
        android:paddingEnd="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date_label"
            android:id="@+id/date_label"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_weight="0"
            android:layout_span="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_date"
            android:id="@+id/event_date"
            android:textColor="#000000"
            android:maxWidth="240dp"
            android:layout_marginLeft="10dp"
            android:layout_column="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TimeRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_label"
            android:id="@+id/time_label"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_time"
            android:id="@+id/event_time"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:maxWidth="240dp"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LocationRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location_label"
            android:id="@+id/location_label"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_location"
            android:id="@+id/event_location"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:maxWidth="240dp"
            android:layout_marginLeft="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/HostRow" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/host_label"
            android:id="@+id/host_label"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_host"
            android:id="@+id/event_host"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:maxWidth="240dp"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/GenreRow" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/genre_label"
            android:id="@+id/genre_label"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_genre"
            android:id="@+id/event_genre"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:maxWidth="240dp"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/DescriptionRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_label"
            android:id="@+id/description_label"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_description"
            android:id="@+id/event_description"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:maxWidth="240dp"
            android:layout_marginLeft="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/RestrictionRow" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restriction_label"
            android:id="@+id/restriction_label"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_restriction"
            android:id="@+id/event_restriction"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:maxWidth="240dp"
            android:layout_marginLeft="10dp" />
    </TableRow>

</TableLayout>
