<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/event_det"
            android:id="@+id/eventdetails"
            android:layout_column="0"
            android:textAlignment="center"
            android:layout_weight="5"
            android:padding="5dp" />

    </TableRow>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:id="@+id/eventpic"
        android:textAlignment="center"
        android:contentDescription="@string/event_pic"
        android:src="#000000"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_name"
        android:padding="5dp"
        android:textAlignment="center"
        android:id="@+id/eventname"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_date"
            android:id="@+id/eventdate"
            android:textColor="#000000" />
    </TableRow>

</TableLayout>
